--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ng-repeat is too slow with a mere thousand objects, so we made this hack to only render a few at a time",
   "main": "index.js",
   "scripts": {
-    "start": "beefy ./src/index.coffee --open --live -- --extension='.coffee'",
+    "start": "beefy ./demo/app.coffee --open --live -- --extension='.coffee' --extension='.haml'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,12 +19,14 @@
   "license": "DWTFYW",
   "browserify": {
     "transform": [
-      "coffeeify"
+      "coffeeify",
+      "hamlify"
     ]
   },
   "devDependencies": {
     "browserify": "^8.1.3",
     "coffee-script": "^1.9.0",
-    "coffeeify": "^1.0.0"
+    "coffeeify": "^1.0.0",
+    "hamlify": "0.0.3"
   }
 }
