--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ng-repeat is too slow with a mere thousand objects, so we made this hack to only render a few at a time",
   "main": "index.js",
   "scripts": {
-    "start": "watchify ./demo/app.coffee -o ./demo/app.js --extension='.coffee' --extension='.haml'", 
+    "start": "watchify ./demo/app.coffee -o ./demo/app.js --extension='.coffee' --extension='.jade' --extension='.styl'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,13 +20,21 @@
   "browserify": {
     "transform": [
       "coffeeify",
-      "hamlify"
+      "jadeify",
+      "stylify"
     ]
   },
   "devDependencies": {
     "browserify": "^8.1.3",
     "coffee-script": "^1.9.0",
     "coffeeify": "^1.0.0",
-    "hamlify": "0.0.3"
+    "hamlify": "0.0.3",
+    "watchify": "~2.3.0",
+    "stylify": "~1.1.2",
+    "jade": "~1.9.2",
+    "jadeify": "~4.0.1"
+  },
+  "dependencies": {
+    "insert-css": "~0.2.0"
   }
 }
