--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "zdd-scroll-repeat",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "ng-repeat is too slow with a mere thousand objects, so we made this hack to only render a few at a time",
   "main": "index.js",
   "scripts": {
     "start": "watchify ./demo/app.coffee -o ./demo/app.js --extension='.coffee' --extension='.jade' --extension='.styl'",
+    "build": "browserify ./src/index.coffee -o ./dist/zdd-scroll-repeat.js --extension='.coffee' --extension='.jade' --extension='.styl'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
