--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "zdd-scroll-repeat",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "ng-repeat is too slow with a mere thousand objects, so we made this hack to only render a few at a time",
   "main": "index.js",
   "scripts": {
-    "start": "watchify ./demo/app.coffee -o ./demo/app.js --extension='.coffee' --extension='.jade' --extension='.styl'",
+    "start": "beefy demo --index demo/index.html --open --live -- --extension='.coffee' --extension='.jade' --extension='.styl'",
     "build": "browserify ./src/index.coffee -o ./dist/zdd-scroll-repeat.js --extension='.coffee' --extension='.jade' --extension='.styl'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
