--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "zdd-scroll-repeat",
-  "version": "1.1.11",
+  "version": "1.1.12",
   "description": "ng-repeat is too slow with a mere thousand objects, so we made this hack to only render a few at a time",
   "main": "index.js",
   "scripts": {
-    "start": "beefy demo --index demo/index.html --open --live -- --extension='.coffee' --extension='.jade' --extension='.styl'",
-    "build": "browserify ./src/index.coffee -o ./dist/zdd-scroll-repeat.js --extension='.coffee' --extension='.jade' --extension='.styl'",
+    "start": "beefy demo --index demo/index.html --open --live -- --extension='.coffee' --extension='.html' --extension='.styl'",
+    "build": "browserify ./src/index.coffee -o ./dist/zdd-scroll-repeat.js --extension='.coffee' --extension='.html' --extension='.styl'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -21,19 +21,18 @@
   "browserify": {
     "transform": [
       "coffeeify",
-      "jadeify",
+      "stringify",
       "stylify"
     ]
   },
   "devDependencies": {
+    "beefy": "^2.1.5",
     "browserify": "^8.1.3",
     "coffee-script": "^1.9.0",
     "coffeeify": "^1.0.0",
-    "hamlify": "0.0.3",
-    "watchify": "~2.3.0",
+    "stringify": "^3.1.0",
     "stylify": "~1.1.2",
-    "jade": "~1.9.2",
-    "jadeify": "~4.0.1"
+    "watchify": "~2.3.0"
   },
   "dependencies": {
     "insert-css": "~0.2.0",
